# SorryIDHMoney

./: .gitignore  AGENTS.md  README.md  background.js  manifest.example.json
.claude/commands/: fetch-logo.md
.github/workflows/: release.yml
interfaces/: about.html  about.js  anime-manager.html  anime-manager.js  options.html  options.js  popup.html  popup.js  toast-tester.html  toast-tester.js  twitch-stats.html  twitch-stats.js  voice-gateway.html  voice-gateway.js
libs/: toast-manager.js
scripts/: adkami-content.js  adn-content.js  anime-cache-manager.js  anime-switcher-content.js  chatgpt-voice-content.js  crunchyroll-content.js  global-content.js  gumgum-content.js  mavanimes-content.js  utils.js  voiranime-content.js  youtube-adblock-reload.js  youtube-auto-reload.js  youtube-shorts-autoscroll.js  youtube-smooth-playback.js
styles/: about.css  anime-manager.css  base.css  options.css  popup.css  toast-tester.css  twitch-stats.css  voice-gateway.css
voice-gateway/: Cargo.toml  SPEC.md
voice-gateway/src/: clipboard.rs  hotkey.rs  main.rs  settings.rs  state.rs  tray.rs  updater.rs  ws_server.rs
