[package]
name = "voice-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
global-hotkey = "0.6"
tray-icon = "0.19"
arboard = "3"
enigo = "0.3"
log = "0.4"
env_logger = "0.11"
eframe = "0.31"
chrono = { version = "0.4", features = ["serde"] }
tungstenite = "0.26"
crossbeam-channel = "0.5"
ureq = { version = "2", features = ["json"] }
semver = "1"
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
